fix: scrollbar not hidden properly for missing !important

--- a/LuminaryVisuals/wwwroot/app.css
+++ b/LuminaryVisuals/wwwroot/app.css
@@ -6,13 +6,14 @@
     --info-color: #002c55 !important;
     --error-color: #7d0100 !important;
     --success-color: #00532e !important;
-    
+    --mud-default-borderradius: 12px !important;
+
 }
 
 
 .mud-input.mud-input-outlined.mud-input-adorned-end.mud-shrink.mud-typography-input, .mud-input.mud-input-outlined.mud-input-adorned-end.mud-shrink.mud-typography-input {
     border-radius: 8px !important;
-}
+} 
 .mud-button-filled.mud-button-filled-info {
     border: solid 2px #008cff !important;
 }
@@ -1324,9 +1325,9 @@ th.mud-table-cell.sticky-left {
 .mud-input.mud-input-outlined.mud-input-adorned-end.mud-shrink.mud-typography-subtitle1.mud-input-auto-grow >
 textarea.mud-input-slot.mud-input-root.mud-input-root-outlined.mud-input-root-adorned-end {
     white-space: pre;
-    overflow-y:hidden;
+    overflow-y:hidden !important;
     height: 55px !important;
-    max-height: 55px !important;
+    max-height: 60px !important;
     transform: translateZ(0);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
